<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
	https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com</groupId>
	<artifactId>Tiramisuhka</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	
	<build>
		<finalName>Tiramisuhka</finalName>
		<pluginManagement>
			<plugins>

				<plugin>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.0</version>
					<configuration>
						<release>11</release>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-war-plugin</artifactId>
					<version>3.2.3</version>
				</plugin>
				<!-- Для надёжных и отказоустойчивых плагинов мы добавляем дополнительный 
					аргумент, ==illegal-access=permitчтобы разрешить любой доступ к отражению 
					для сторонних библиотек: WARNING ... -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.22.0</version>
					<configuration>
						<argLine>
							--illegal-access=permit
						</argLine>
					</configuration>
				</plugin>
				<!-- Этот плагин помогает найти последние версии плагинов или зависимостей 
					для ваших модулей -->
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>versions-maven-plugin</artifactId>
					<version>2.7</version>
					<configuration>
						<generateBackupPoms>false</generateBackupPoms>
					</configuration>
				</plugin>

			</plugins>

		</pluginManagement>
	</build>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<spring-version>5.1.4.RELEASE</spring-version>
	</properties>

	<dependencies>
 
	</dependencies>
	
</project>